--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
         <artifactId>opennlp-tools</artifactId>
         <version>1.9.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.opennlp</groupId>
+        <artifactId>tf-ner-poc</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
 </dependencies>
 </project>
